change a few paths

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -1,4 +1,5 @@
-\documentclass[deRSE,a4paper]{scrlttr2}
+\documentclass[../Vorlagen/de-RSE_Brief,a4paper]{scrlttr2}
+\graphicspath{{../Vorlagen/}}
 \begin{document}
 
 \setkomavar*{enclseparator}{Anlage}
