--- a/Vorlagen/BeispielBrief.tex
+++ b/Vorlagen/BeispielBrief.tex
@@ -1,4 +1,4 @@
-\documentclass[deRSE,a4paper]{scrlttr2}
+\documentclass[de-RSE_Brief,a4paper]{scrlttr2}
 \usepackage[ngerman,KeepShorthandsActive]{babel}
 
 
