Rechenschaftsbericht als Name

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -28,7 +28,7 @@ Auf der Tagesordnung stehen folgende Themen:
 \item Bekanntgabe und Genehmigung der Tagesordnung
 \item Berichte
 \begin{enumerate}
- \item Jahresbericht des Vorstands
+ \item Rechenschaftsbericht des Vorstands
  \item Finanzbericht der Schatzmeister
  \item Bericht der Rechnungsprüfer
  \item Aussprache über die Berichte
