--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -30,7 +30,7 @@ Auf der Tagesordnung stehen folgende Themen:
 \begin{enumerate}
  \item Rechenschaftsbericht des Vorstands
  \item Finanzbericht der Schatzmeister
- \item Bericht der Rechnungsprüfer
+ \item Bericht der Kassenprüfer
  \item Aussprache über die Berichte
 \end{enumerate}
 \item Entlastung des Vorstands
