Split der 2018/2019 Berichte

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -26,14 +26,21 @@ Auf der Tagesordnung stehen folgende Themen:
 \item Feststellung der ordnungsgemäßen Einladung
 \item Feststellung der Beschlussfähigkeit
 \item Bekanntgabe und Genehmigung der Tagesordnung
-\item Berichte
+\item Berichte 2018
 \begin{enumerate}
  \item Rechenschaftsbericht des Vorstands
  \item Finanzbericht der Schatzmeister
  \item Bericht der Kassenprüfer
  \item Aussprache über die Berichte
 \end{enumerate}
-\item Entlastung des Vorstands
+\item Entlastung des Vorstands für 2018
+\item Vorläufige Berichte 2019
+\begin{enumerate}
+ \item Rechenschaftsbericht des Vorstands
+ \item Finanzbericht der Schatzmeister
+ \item Bericht der Kassenprüfer
+ \item Aussprache über die Berichte
+\end{enumerate}
 \item Neuwahl des Vorstands
 \item Neuwahl der Kassenprüfer
 \item Bericht über die Vereinsziele im kommenden Jahr
