--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -17,6 +17,17 @@
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 6. Juni 2019 um 15:15 Uhr ein.
 Diese wird im Konferenzsaal A56 im Wissenschaftspark Albert Einstein in Potsdam stattfinden.
 
+Wie in der Satzung vorgeschrieben, wird auf der Jahreshauptversammlung eine Wahl des Vorstands durchgeführt.
+Die Möglichkeit der Online-Teilnahme wird nur eingerichtet, wenn dies ein Vereinsmitglied bis eine Woche vor der Wahl formlos beantragt.
+Die Wahl wird laut Satzung nicht geheim durchgeführt, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.
+Findet eine solche geheime Wahl statt, ist eine Stimmabgabe online dieses Jahr nicht möglich.
+Da die Forderung nach einer geheimen Wahl auch kurzfristig erfolgen kann, sollte man sich im Fall einer Online-Teilnahme die Möglichkeit der Teilnahme an der Wahl sichern, indem man einem anderen, persönlich anwesenden Mitglied eine entsprechende Vollmacht ausstellt.
+
+Bitte richte Wahlnominierungen an den Vorstand, zusammen mit dem angestrebten Amt und einer persönlichen Kurzbeschreibung.
+Der aktuelle Vorstand kandidiert vollständig wieder.
+Die Kurzbeschreibung aller bis dahin bekannten Kandidaten und Kandidatinnen wird kurz vor der Wahl den Mitgliedern per Email zur Verfügung gestellt.
+
+\clearpage
 \vspace{2em}
 Auf der Tagesordnung stehen folgende Themen:
 \begin{enumerate}
