--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -12,7 +12,7 @@
     Musterstraße 0815\\
     D-01234 Oberkleindorf
 }
-\opening{Sehr geehrter Herr Mustermann,}
+\opening{Lieber Max,}
 
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 6. Juni 2019 um 15:15 Uhr ein.
 Diese wird im Konferenzsaal A56 im Wissenschaftspark Albert Einstein in Potsdam stattfinden.
@@ -25,7 +25,7 @@ Da die Forderung nach einer geheimen Wahl auch kurzfristig erfolgen kann, sollte
 
 Bitte richte Wahlnominierungen an den Vorstand, zusammen mit dem angestrebten Amt und einer persönlichen Kurzbeschreibung.
 Der aktuelle Vorstand kandidiert vollständig wieder.
-Die Kurzbeschreibung aller bis dahin bekannten Kandidaten und Kandidatinnen wird kurz vor der Wahl den Mitgliedern per Email zur Verfügung gestellt.
+Kurzbeschreibungen aller Kandidaten und Kandidatinnen, die bis spätestens zum 30. Mai 2019 beim Vorstand eingehen, werden den Mitgliedern per Email zur Verfügung gestellt.
 
 \clearpage
 \vspace{2em}
@@ -34,15 +34,14 @@ Auf der Tagesordnung stehen folgende Themen:
 \setlength\itemsep{0em}
 \item Eröffnung der Mitgliederversammlung
 \item Wahl der Schriftführung
-\item Feststellung der ordnungsgemäßen Einladung
-\item Feststellung der Beschlussfähigkeit
+\item Feststellung der ordnungsgemäßen Einladung und der Beschlussfähigkeit
 \item Bekanntgabe und Genehmigung der Tagesordnung
 \item Berichte 2018
 \begin{enumerate}
  \item Rechenschaftsbericht des Vorstands
  \item Finanzbericht der Schatzmeister
  \item Bericht der Kassenprüfer
- \item Aussprache über die Berichte
+ \item Einholung von Kommentaren der Mitglieder über die Berichte
 \end{enumerate}
 \item Entlastung des Vorstands für 2018
 \item Vorläufige Berichte 2019
@@ -50,18 +49,18 @@ Auf der Tagesordnung stehen folgende Themen:
  \item Rechenschaftsbericht des Vorstands
  \item Finanzbericht der Schatzmeister
  \item Bericht der Kassenprüfer
- \item Aussprache über die Berichte
+ \item Einholung von Kommentaren der Mitglieder über die Berichte
 \end{enumerate}
 \item Neuwahl des Vorstands
 \item Neuwahl der Kassenprüfer
-\item Bericht über die Vereinsziele im kommenden Jahr
-\item Aussprache über die Vereinsziele
 \item Satzungsgemäß gestellte Anträge
 \item Sonstiges
 \item Schließung des Mitgliederversammlung
 \end{enumerate}
 
-Unser Verein lebt nur durch seine Mitglieder. Bitte kommt zahlreich und pünktlich.
+Unser Verein lebt nur durch seine Mitglieder.
+Laut Satzung sind im Normalfall 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig.
+Bitte kommt zahlreich und pünktlich, lasst uns aber auch wissen, falls es doch nicht klappt.
 
 \closing{Mit freundlichen Grüßen}
 \end{letter}
