--- a/Beitrittserklärung/erklärung.tex
+++ b/Beitrittserklärung/erklärung.tex
@@ -2,6 +2,7 @@
 \graphicspath{{../Vorlagen/}}
 \usepackage{mathpazo}
 \usepackage[hidelinks]{hyperref}
+\usepackage{setspace}
 
 \pagestyle{empty}
 
@@ -9,19 +10,21 @@
 \begin{letter}{}
 \opening{}
 \vspace{-9cm}
-{\large\textbf{\centering Antrag auf Mitgliedschaft in der\\de-RSE e.V. - Gesellschaft für Forschungssoftware\\*[1em]}}
+\begin{centering}
+{\large\textbf{Beitrittserklärung der\\de-RSE e.V. - Gesellschaft für Forschungssoftware}}\\
+{\tiny Kleineweg 79, 12101 Berlin}\\*[1em]
+\end{centering}
 
-\stepcounter{footnote}\footnotetext{optional}\addtocounter{footnote}{-1}
-
-\begin{Form}
+\def\arraystretch{0.85}
 \begin{tabular}{ll}
-Vorname:            & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\
-Nachname:           & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\*[.5em]
-Straße, Hausnummer: & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\
-PLZ:                & \TextField[height=0.01cm, width=0.2\textwidth]{} \\\\
-Wohnort:            & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\*[.5em]
-Email:              & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\*[.5em]
-PGP/GPG Schlüssel\footnotemark & \TextField[height=0.01cm, width=0.65\textwidth]{} \\\\
+\textbf{Vorname}:            & \TextField[width=0.65\textwidth]{} \\\\
+\textbf{Nachname}:           & \TextField[width=0.65\textwidth]{} \\\\*[.5em]
+\textbf{Straße, Hausnummer}: & \TextField[width=0.65\textwidth]{} \\\\
+\textbf{PLZ}:                & \TextField[width=0.2\textwidth]{}  \\\\
+\textbf{Wohnort}:            & \TextField[width=0.65\textwidth]{} \\\\*[.5em]
+\textbf{Geburtsdatum}:       & \TextField[width=0.65\textwidth]{} \\\\
+\textbf{Email}:              & \TextField[width=0.65\textwidth]{} \\\\
+`PGP/GPG Schlüssel:  & \TextField[width=0.65\textwidth]{} \\\\
 \end{tabular}
 
 Durch die Unterschrift erkennt der/die Antragssteller/-in die Satzung und die Ordnungen von de-RSE e.V. - Gesellschaft für Forschungssoftware an.
@@ -29,18 +32,39 @@ Diese sind öffentlich einsehbar.
 
 Der Mitgliedsbeitrag für ordentliche Mitglieder beträgt 60~€ pro Kalenderjahr. Für Studierende, Schüler, Arbeitslose, Umschüler, Rentner und Menschen mit Behinderung beträgt der jährliche Mitgliedsbeitrag nach Vorlage eines geeigneten Nachweises 30~€. Die Höhe des Mitgliedsbeitrags für Fördermitglieder ist ihnen freigestellt.
 
-Das Beitragsjahr beginnt mit dem Kalenderjahr des Eintritts des Mitglieds. Der Beitrag ist im Voraus für das gesamte Beitragsjahr fällig, es sei denn, beim Eintritt wird ausdrücklich eine anteilige Zahlung im ersten Jahr beantragt und diese wird genehmigt.\\*[.5em]
+Das Beitragsjahr beginnt mit dem Kalenderjahr des Eintritts des Mitglieds. Der Beitrag ist im Voraus für das gesamte Beitragsjahr fällig, es sei denn, beim Eintritt wird eine anteilige Zahlung im ersten Jahr beantragt und diese wird genehmigt.\\
 
 \CheckBox[checked,name=anteiligeZahlung]{anteilige Zahlung im ersten Jahr beantragen}\\*[.5em]
 
-Der Mitgliedsbeitrag ist unter Angabe der oben genannten Email auf folgendes Vereinskonto zu überweisen:\\
+Ich beantrage die Aufnahme in die de-RSE e.V. als\\*[.5em]
+% Eigentlich wäre das hier besser, macht aber Probleme mit einigen pdf-viewern bzw. ist ein Latex-Problem
+%\ChoiceMenu[radio,name=Mitgliedstyp]{\mbox{}}{ordentliches Mitglied=o,Fördermitglied=f}\\*[.5em]
+\CheckBox[name=Mitgliedstyp]{ordentliches Mitglied} \CheckBox[name=Mitgliedstyp]{Fördermitglied}\\*[.5em]
 
+Der Mitgliedsbeitrag ist unter Angabe der oben genannten Email, oder falls später bekannt der Mitgliedsnummer, auf folgendes Vereinskonto zu überweisen:\\*[.5em]
 IBAN: DE08100900002775729000 (Berliner Volksbank)\\*[.5em]
 
-\vspace{1em}
-\begin{tabular}{ll}
-Datum:        & \TextField[height=0.01cm, width=0.2\textwidth]{} \\\\
-Unterschrift: & \\
+\clearpage
+
+\begin{spacing}{0.5}
+\textbf{
+Wir weisen gemäß § 33 Bundesdatenschutzgesetz darauf hin, dass zum Zweck der Mitgliederverwaltung und -betreuung die mit der Beitrittserklärung erhobenen Daten der Mitglieder in automatisierten Dateien gespeichert, verarbeitet und genutzt werden.}
+
+Ich bin mit der Erhebung, Verarbeitung und Nutzung dieser personenbezogener Daten durch den Verein zur Mitgliederverwaltung im Wege der elektronischen Datenverarbeitung einverstanden.
+Mir ist bekannt, dass dem Aufnahmeantrag ohne dieses Einverständnis nicht stattgegeben werden kann.\\*[2em]
+\end{spacing}
+
+Ich bin außerdem damit einverstanden, dass der Verein im Zusammenhang mit dem Vereinszweck sowie satzungsgemäßen Veranstaltungen personenbezogene Daten und Fotos von mir veröffentlicht und diese ggf. an Print und andere Medien übermittelt.
+Dieses Einverständnis betrifft unter anderem folgende Veröffentlichungen: Kontaktdaten von Vereinsfunktionären, Berichte über Ehrungen und Berichte über vom Verein abgehaltene Veranstaltungen.
+Veröffentlicht werden ggf. Fotos, der Name, die Vereinszugehörigkeit, die Funktion im Verein.
+Mir ist bekannt, dass ich jederzeit gegenüber dem Vorstand der Veröffentlichung von persönlichen Daten widersprechen kann.
+
+\CheckBox[name=persoenlicheDaten]{der Verwendung persönlicher Datem zum Vereinszweck zustimmen}\\*[.5em]
+
+\vspace{3cm}
+\begin{Form}
+\begin{tabular}{llll}
+Datum:        & \TextField[height=0.01cm, width=0.2\textwidth]{} & Unterschrift: & \\
 \end{tabular}
 
 \end{Form}
