--- a/Spendenquittung/spendenquittung.tex
+++ b/Spendenquittung/spendenquittung.tex
@@ -59,30 +59,37 @@
 
 \begin{document}
 \begin{Form}
-\MyFormBox[1.0cm]{Aussteller (Bezeichnung und Anschrift der steuerbegünstigten Einrichtung)}{de-RSE e.V.}
+\MyFormBox[1.0cm]{Aussteller (Bezeichnung und Anschrift der steuerbegünstigten Einrichtung)}{de-RSE e.V.
+c/o Stephan Druskat
+Kleineweg 79
+12101 Berlin
+E-Mail: vorstand@de-rse.org}
 
 {\bfseries\large \ifthenelse{\boolean{sammel}}{Sammelbestätigung}{Bestätigung} über Geldzuwendungen/Mitgliedsbeiträge}\vspace*{1em}
 
 {\footnotesize im Sinne des § 10b des Einkommensteuergesetzes an eine der in § 5 Abs. 1 Nr. 9 des Körperschaftsteuergesetzes bezeichneten Körperschaften, Personenvereinigungen oder Vermögensmassen}
 
-\MyFormBox[2.0cm]{Name und Anschrift des Zuwendenden}{}
+\MyFormBox[2.0cm]{Name und Anschrift des Zuwendenden}{<NAME UND ANSCHRIFT DES MITGLIEDS>}
 
 \begin{tabu}{|[1pt]p{0.3\textwidth}|[1pt]p{0.32\textwidth} |[1pt]p{0.3\textwidth}|[1pt]} \tabucline[1pt]{-}
 \scriptsize \ifthenelse{\boolean{sammel}}{Summe}{Betrag} der Zuwendungen - in Ziffern - & \scriptsize- in Buchstaben - & \scriptsize \ifthenelse{\boolean{sammel}}{Zeitraum der Sammelbestätigung}{Tag der Zuwendung} \\ 
 \vspace*{1em} & & \\ 
-123,45 \euro & --- Einhundertdreiundzwangig --- & 01.01.2001--31.12.2001 \\
+<WERT IN ZIFFERN> \euro & --- <WERT IN WORTEN> --- & <ZEITRAUM MM-MM YY> \\
 \vspace*{1em} & & \\ \tabucline[1pt]{-}
 \end{tabu}
 
-\ifthenelse{\boolean{sammel}}{}{\vspace*{1em}Es handelt sich um den Verzicht auf Erstattung von Aufwendungen: 	\hspace{1em}	Ja  \notmarked	\hspace{1em}	Nein  \notmarked} \vspace*{1em}
+\ifthenelse{\boolean{sammel}}{}{\vspace*{1em}Es handelt sich um den Verzicht auf Erstattung von Aufwendungen: 	\hspace{1em}	Ja  \notmarked	\hspace{1em}	Nein  \marked} \vspace*{1em}
 
 
-\notmarked Wir sind wegen Förderung (Angabe des begünstigten Zwecks / der begünstigten Zwecke) \hdashrule{2cm}{1pt}{1pt}  nach dem letzten uns zugegangenen Freistellungsbescheid bzw. nach der Anlage zum Körperschaftssteuerbescheid des Finanzamts \hdashrule{2cm}{1pt}{1pt} StNr \hdashrule{2cm}{1pt}{1pt} vom \hdashrule{2cm}{1pt}{1pt} für den letzten Veranlagungszeitraum \hdashrule{2cm}{1pt}{1pt} nach §~5 Abs. 1 Nr.~9 des Körperschaftssteuergesetzes von der Körperschaftssteuer und nach §~3 Nr.~6 des Gewerbesteuergesetzes von der Gewerbesteuer befreit. \vspace{2em}
-  
+\marked Wir sind wegen Förderung der Bildung, Wissenschaft und Forschung nach dem letzten uns zugegangenen Freistellungsbescheid bzw. nach der Anlage zum Körperschaftssteuerbescheid des Finanzamts Berlin StNr 27/640/60961 vom 22.10.2019 für den letzten Veranlagungszeitraum nach §~5 Abs. 1 Nr.~9 des Körperschaftssteuergesetzes von der Körperschaftssteuer und nach §~3 Nr.~6 des Gewerbesteuergesetzes von der Gewerbesteuer befreit. \vspace{2em}
+
 \notmarked Die Einhaltung der satzungsmäßigen Voraussetzungen nach den §§ 51, 59, 60 und 61 AO wurde vom Finanzamt \hdashrule{2cm}{1pt}{1pt} StNr. \hdashrule{2cm}{1pt}{1pt} mit Bescheid vom\hdashrule{2cm}{1pt}{1pt} nach § 60 AO gesondert festgestellt. Wir fördern nach unserer Satzung (Angabe des begünstigten Zwecks / der begünstigten Zwecke) \hdashrule{2cm}{1pt}{1pt}
- 
+
+
 \begin{mdframed}[style=MyFormStyle]%
-Es wird bestätigt, dass die Zuwendung nur zur Förderung der begünstigten Zwecke 1, 2, 3 und 4 AO verwendet wird. 
+Es wird bestätigt, dass die Zuwendung nur zur Förderung der Bildung, Wissenschaft und Forschung verwendet wird. 
+\textbf{Nur für steuerbegünstigte Einrichtungen, bei denen die Mitgliedsbeiträge steuerlich nicht abziehbar sind}
+\marked Es wird bestätigt, dass es sich nicht um einen Mitgliedsbeitrag handelt, dessen Abzug nach § 10b Abs. 1 des Einkommensteuergesetzes ausgeschlossen ist.
 \end{mdframed} 
 
 \ifthenelse{\boolean{sammel}}{\vspace*{0.5em}Es wird bestätigt, dass über die in der Gesamtsumme enthaltenen Zuwendungen keine weiteren Bestätigungen, weder formelle Zuwendungsbestätigungen noch Beitragsquittungen o.ä., ausgestellt wurden und werden. 
@@ -91,7 +98,7 @@ Es wird bestätigt, dass die Zuwendung nur zur Förderung der begünstigten Zwec
 
 \vspace*{2.5em} 
 
-Ortsname, den \today \hspace*{20em} Max Mustermann
+<ORT>, den \today \hspace*{20em} <SCAN UNTERSCHRIFT>
 
 \hrule
 
