Add sentence about applying for a seat in the room

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
@@ -15,7 +15,9 @@
 \opening{Lieber Max,}
 
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 27. August 2020 um 12:00 Uhr ein.
-Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten. Da die Anzahl der Personen in den Räumlichkeiten in Berlin durch Hygienebeschränkungen derzeit sehr begrenzt ist und aus dem gleichen Grund Onlinetreffen sowieso vorzuziehen sind, würden wir allen Mitgliedern ans Herz legen, virtuell (online) teilzunehmen.
+Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten. 
+Da die Anzahl der Personen in den Räumlichkeiten in Berlin durch Hygienebeschränkungen derzeit sehr begrenzt ist und aus dem gleichen Grund Onlinetreffen sowieso vorzuziehen sind, würden wir allen Mitgliedern ans Herz legen, virtuell (online) teilzunehmen. 
+Wer dennoch persönlich teilnehmen möchte wird gebeten, per E-Mail beim Vorstand Interesse anzumelden (vorstand@de-rse.org).
 
 Wie in der Satzung vorgeschrieben, wird auf der Jahreshauptversammlung eine Wahl des Vorstands durchgeführt.
 Die Möglichkeit der Online-Teilnahme an Wahlen ist für die auf der derzeitigen Tagesordnung aufgeführten Abstimmungspunkte möglich.
