--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
@@ -4,26 +4,28 @@
 
 \setkomavar*{enclseparator}{Anlage}
 \setkomavar{subject}{Betreff: Einladung zur Jahreshauptversammlung}
-\setkomavar{date}{den 13. August 2020}
+\setkomavar{date}{den 12. August 2020}
 \setkomavar{place}{Berlin}
 
-\begin{letter}{
-    Max Mustermann\\
-    Musterstraße 0815\\
-    D-01234 Oberkleindorf
+\begin{letter}{\mbox{}
 }
-\opening{Lieber Max,}
+\opening{Liebes de-RSE e.V.-Mitglied,}
 
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 27. August 2020 um 12:00 Uhr ein.
-Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten. Da die Anzahl der Personen in den Räumlichkeiten in Berlin durch Hygienebeschränkungen derzeit sehr begrenzt ist und aus dem gleichen Grund Onlinetreffen sowieso vorzuziehen sind, würden wir allen Mitgliedern ans Herz legen, virtuell (online) teilzunehmen.
+Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten.
+Da die Anzahl der Personen in den Räumlichkeiten in Berlin durch Hygienebeschränkungen derzeit sehr begrenzt ist (acht) und aus dem gleichen Grund Onlinetreffen sowieso vorzuziehen sind, würden wir allen Mitgliedern ans Herz legen, virtuell (online) teilzunehmen.
+Wer dennoch in Person teilnehmen möchte, sollte das zeitnah dem Vorstand mitteilen.
 
 Wie in der Satzung vorgeschrieben, wird auf der Jahreshauptversammlung eine Wahl des Vorstands durchgeführt.
 Die Möglichkeit der Online-Teilnahme an Wahlen ist für die auf der derzeitigen Tagesordnung aufgeführten Abstimmungspunkte möglich.
-Online abgegebene Stimmen müssen bis vor Beginn der Mitgliederversammlung abgegeben worden sein.
-Jedes Mitglied erhält zur Online-Wahl eine separate Email mit den notwendigen Daten.
-Die Wahl wird laut Satzung nicht geheim durchgeführt, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.
-%Findet eine solche geheime Wahl statt, ist eine Stimmabgabe online dieses Jahr nicht möglich.
-%Da die Forderung nach einer geheimen Wahl auch kurzfristig erfolgen kann, sollte man sich im Fall einer Online-Teilnahme die Möglichkeit der Teilnahme an der Wahl sichern, indem man einem anderen, persönlich anwesenden Mitglied eine entsprechende Vollmacht ausstellt.
+Die Wahl wird mit Annahme der Tagesordnung am 27. August gestartet und 20 Minuten geöffnet bleiben.
+Jedes Mitglied erhält dann zur Online-Wahl eine separate Email mit den notwendigen Daten.
+Die Wahl muss laut Satzung nicht geheim durchgeführt werden, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.
+Online abgegebene Stimmen sind jedoch in jedem Fall "`geheim"'.
+Selbst lokal teilnehmende Mitglieder werden gebeten, online abzustimmen.
+
+Da das benutzte Wahlsystem keine schnellen Änderungen oder Neuerstellungen von Wahlen zulässt, werden alle anderen als die unten gekennzeichneten Abstimmungen virtuell, also durch Teilnahme an der Videokonferenz, abgehalten.
+Diese sind dann notwendigerweise nicht geheim, würden das aber auch in-persona nicht sein.
 
 \clearpage
 \vspace{2em}
@@ -31,7 +33,8 @@ Auf der Tagesordnung stehen folgende Themen. Die mit ${}^*$ gekennzeichneten Pun
 \begin{enumerate}
 \setlength\itemsep{0em}
 \item Eröffnung der Mitgliederversammlung
-\item Wahl der Schriftführung ${}^*$
+\item Annahme der Schriftführung (Bernadette Fritzsch, Stellv.: Stephan Druskat)
+\item Annahme der Wahlleitung (Stephan Janosch, Stellv.: Daniel Nüst)
 \item Feststellung der ordnungsgemäßen Einladung und der Beschlussfähigkeit
 \item Bekanntgabe und Genehmigung der Tagesordnung
 \item Berichte 2019
@@ -50,8 +53,8 @@ Auf der Tagesordnung stehen folgende Themen. Die mit ${}^*$ gekennzeichneten Pun
 \end{enumerate}
 
 Unser Verein lebt nur durch seine Mitglieder.
-Laut Satzung sind im Normalfall 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig.
-Bitte nehmt diese Verantwortung wahr und wählt!
+\textbf{Laut Satzung sind im Normalfall 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig.}
+Bitte nehmt diese Verantwortung wahr, nehmt teil und wählt!
 
 \closing{Mit freundlichen Grüßen}
 \end{letter}
