Hinweis auf Online-Resourcen (Kandidaten, Rechenschaftsbericht)

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
@@ -1,5 +1,6 @@
 \documentclass[../Vorlagen/de-RSE_Brief,a4paper]{scrlttr2}
 \graphicspath{{../Vorlagen/}}
+\usepackage{hyperref}
 \begin{document}
 
 \setkomavar*{enclseparator}{Anlage}
@@ -55,6 +56,20 @@ Auf der Tagesordnung stehen folgende Themen. Die mit ${}^*$ gekennzeichneten Pun
 Unser Verein lebt nur durch seine Mitglieder.
 \textbf{Laut Satzung sind im Normalfall 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig.}
 Bitte nehmt diese Verantwortung wahr, nehmt teil und wählt!
+
+\clearpage
+An Mitarbeit im Vorstand sind für die nächste Amtsperiode folgende Personen interessiert. Mehr Informationen darüber findet man hier:\\
+\href{https://pad.gwdg.de/ohpGHga9Qlqj2yAAhQ08Ig}{https://pad.gwdg.de/ohpGHga9Qlqj2yAAhQ08Ig}.
+\begin{itemize}
+ \item Vorsitzender: Frank Löffler
+ \item stellvertretender Vorsitzender: Daniel Nüst
+ \item Schatzmeister: Stephan Janosch
+ \item stellvertretender Schatzmeister: Florian Thiery
+ \item Schriftführerin: Bernadette Fritzsch
+ \item stellvertretender Schriftführer: Stephan Druskat
+\end{itemize}
+Der Tätigkeitsbericht 2019 kann hier eingesehen werden:\\
+\href{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2019/Rechenschaftsbericht_2019_publiziert.pdf}{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2019/\\Rechenschaftsbericht\_2019\_publiziert.pdf}.
 
 \closing{Mit freundlichen Grüßen}
 \end{letter}
