--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2020.tex
@@ -13,24 +13,21 @@
 \opening{Liebes de-RSE e.V.-Mitglied,}
 
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 27. August 2020 um 12:00 Uhr ein.
-Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten.
+Diese wird in den HIDA Office Räumlichkeiten in Berlin und zusätzlich online abgehalten: \href{https://meet.gwdg.de/b/fra-hkw-gqe}{https://meet.gwdg.de/b/fra-hkw-gqe}.
 Da die Anzahl der Personen in den Räumlichkeiten in Berlin durch Hygienebeschränkungen derzeit sehr begrenzt ist (acht) und aus dem gleichen Grund Onlinetreffen sowieso vorzuziehen sind, würden wir allen Mitgliedern ans Herz legen, virtuell (online) teilzunehmen.
 Wer dennoch persönlich teilnehmen möchte wird gebeten, per E-Mail beim Vorstand Interesse anzumelden (vorstand@de-rse.org).
 
 Wie in der Satzung vorgeschrieben, wird auf der Jahreshauptversammlung eine Wahl des Vorstands durchgeführt.
-Die Möglichkeit der Online-Teilnahme an Wahlen ist für die auf der derzeitigen Tagesordnung aufgeführten Abstimmungspunkte möglich.
-Die Wahl wird mit Annahme der Tagesordnung am 27. August gestartet und 20 Minuten geöffnet bleiben.
-Jedes Mitglied erhält dann zur Online-Wahl eine separate Email mit den notwendigen Daten.
 Die Wahl muss laut Satzung nicht geheim durchgeführt werden, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.
-Online abgegebene Stimmen sind jedoch in jedem Fall "`geheim"'.
-Selbst lokal teilnehmende Mitglieder werden gebeten, online abzustimmen.
+Online anwesende Mitglieder können an der Wahl teilnehmen.
 
-Da das benutzte Wahlsystem keine schnellen Änderungen oder Neuerstellungen von Wahlen zulässt, werden alle anderen als die unten gekennzeichneten Abstimmungen virtuell, also durch Teilnahme an der Videokonferenz, abgehalten.
-Diese sind dann notwendigerweise nicht geheim, würden das aber auch in-persona nicht sein.
+Unser Verein lebt nur durch seine Mitglieder.
+\textbf{Laut Satzung werden am 27. August 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig sein. Das sind aller Voraussicht nach mindestens 13 wahlberechtigte Mitglieder.}
+Bitte nehmt diese Verantwortung wahr, nehmt teil und wählt!
 
 \clearpage
 \vspace{2em}
-Auf der Tagesordnung stehen folgende Themen. Die mit ${}^*$ gekennzeichneten Punkte sind Teil der Online-Wahl:
+Auf der Tagesordnung stehen folgende Themen.
 \begin{enumerate}
 \setlength\itemsep{0em}
 \item Eröffnung der Mitgliederversammlung
@@ -45,17 +42,13 @@ Auf der Tagesordnung stehen folgende Themen. Die mit ${}^*$ gekennzeichneten Pun
  \item Bericht der Kassenprüfer
  \item Einholung von Kommentaren der Mitglieder über die Berichte
 \end{enumerate}
-\item Entlastung des Vorstands für 2019 ${}^*$
-\item Neuwahl des Vorstands ${}^*$
-\item Neuwahl der Kassenprüfer ${}^*$
+\item Entlastung des Vorstands für 2019
+\item Neuwahl des Vorstands
+\item Neuwahl der Kassenprüfer
 \item Satzungsgemäß gestellte Anträge
 \item Sonstiges
 \item Schließung des Mitgliederversammlung
 \end{enumerate}
-
-Unser Verein lebt nur durch seine Mitglieder.
-\textbf{Laut Satzung sind im Normalfall 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig.}
-Bitte nehmt diese Verantwortung wahr, nehmt teil und wählt!
 
 \clearpage
 An Mitarbeit im Vorstand sind für die nächste Amtsperiode folgende Personen interessiert. Mehr Informationen darüber findet man hier:\\
