Update TeX files to new address

--- a/Beitrittserklärung/erklärung.tex
+++ b/Beitrittserklärung/erklärung.tex
@@ -12,7 +12,7 @@
 \vspace{-9cm}
 \begin{centering}
 {\large\textbf{Beitrittserklärung der\\de-RSE e.V. - Gesellschaft für Forschungssoftware}}\\
-{\tiny Kleineweg 79, 12101 Berlin}\\*[1em]
+{\tiny c/o Deutsches Zentrum für Luft- und Raumfahrt (DLR), Institut für Softwaretechnologie, Rutherfordstraße 2, 12489 Berlin}\\*[1em]
 \end{centering}
 
 \def\arraystretch{0.95}
