Änderungen nach heutiger Sitzung

--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2021.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2021.tex
@@ -30,7 +30,7 @@ Auf der Tagesordnung stehen folgende Themen.
 \setlength\itemsep{0em}
 \item Eröffnung der Mitgliederversammlung
 \item Annahme der Schriftführung (Bernadette Fritzsch, Stellv.: Stephan Druskat)
-\item Annahme der Wahlleitung (TODO, Stellv.: TODO)
+\item Bekanntgabe und Annahme der Wahlleitung
 \item Feststellung der ordnungsgemäßen Einladung und der Beschlussfähigkeit
 \item Bekanntgabe und Genehmigung der Tagesordnung
 \item Berichte 2020
@@ -49,15 +49,17 @@ Auf der Tagesordnung stehen folgende Themen.
 \end{enumerate}
 
 \clearpage
-An Mitarbeit im Vorstand sind für die nächste Amtsperiode folgende Personen interessiert.
+Für die Mitarbeit im Vorstand in der nächsten Amtsperiode haben bisher folgende Personen Interesse bekundet:
 \begin{itemize}
  \item Vorsitzender: Frank Löffler
  \item stellvertretender Vorsitzender: Daniel Nüst
  \item Schatzmeister: Stephan Janosch
  \item stellvertretender Schatzmeister: Florian Thiery
  \item Schriftführerin: Bernadette Fritzsch
- \item stellvertretender Schriftführer: TODO
+ \item stellvertretender Schriftführer: Jan Philipp Dietrich
 \end{itemize}
+Solltest Du auch Interesse haben, den Verein im Vorstand zu unterstützen, melde Dich bitte so zeitig wie möglich beim bisherigen Vorstand: vorstand@de-rse.org.
+
 Der Tätigkeitsbericht 2020 kann hier eingesehen werden:\\
 \href{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2020/Rechenschaftsbericht_2020_publiziert.pdf}{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2020/\\Rechenschaftsbericht\_2020\_publiziert.pdf}.
 
