--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2021.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2021.tex
@@ -1,4 +1,4 @@
-\documentclass[../Vorlagen/de-RSE_Brief,a4paper]{scrlttr2}
+\documentclass[../Vorlagen/de-RSE_Brief,a4paper,addrfield=no]{scrlttr2}
 \graphicspath{{../Vorlagen/}}
 \usepackage{hyperref}
 \begin{document}
@@ -8,16 +8,18 @@
 \setkomavar{date}{den 31. August 2021}
 \setkomavar{place}{Berlin}
 
+\setplength{toaddrvpos}{176pt}
+
 \begin{letter}{\mbox{}
 }
 \opening{Liebes de-RSE e.V.-Mitglied,}
 
-der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 15. September 2021 um 13:00 Uhr ein.
+der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 15. September 2021 um 13:00 Uhr ein.\\
 
-Diese wird online abgehalten: \href{https://meet.gwdg.de/b/fra-hkw-gqe}{https://meet.gwdg.de/b/fra-hkw-gqe}.
+Diese wird online abgehalten: \href{https://meet.gwdg.de/b/fra-hkw-gqe}{https://meet.gwdg.de/b/fra-hkw-gqe}.\\
 
 Wie in der Satzung vorgeschrieben, wird auf der Jahreshauptversammlung eine Wahl des Vorstands durchgeführt.
-Die Wahl muss laut Satzung nicht geheim durchgeführt werden, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.
+Die Wahl muss laut Satzung nicht geheim durchgeführt werden, es sei denn, mindestens ein Mitglied fordert eine geheime Wahl.\\
 
 Unser Verein lebt nur durch seine Mitglieder.
 \textbf{Laut Satzung werden am 15. September 25\% der ordentlichen Mitglieder zur Herstellung der Beschlussfähigkeit der Versammlung nötig sein. Das sind aller Voraussicht nach mindestens 14 wahlberechtigte Mitglieder.}
@@ -29,7 +31,7 @@ Auf der Tagesordnung stehen folgende Themen.
 \begin{enumerate}
 \setlength\itemsep{0em}
 \item Eröffnung der Mitgliederversammlung
-\item Annahme der Schriftführung (Bernadette Fritzsch, Stellv.: Stephan Druskat)
+\item Bekanntgabe und Annahme der Schriftführung
 \item Bekanntgabe und Annahme der Wahlleitung
 \item Feststellung der ordnungsgemäßen Einladung und der Beschlussfähigkeit
 \item Bekanntgabe und Genehmigung der Tagesordnung
@@ -58,9 +60,10 @@ Für die Mitarbeit im Vorstand in der nächsten Amtsperiode haben bisher folgend
  \item Schriftführerin: Bernadette Fritzsch
  \item stellvertretender Schriftführer: Jan Philipp Dietrich
 \end{itemize}
-Solltest Du auch Interesse haben, den Verein im Vorstand zu unterstützen, melde Dich bitte so zeitig wie möglich beim bisherigen Vorstand: vorstand@de-rse.org.
+Solltest Du auch Interesse haben, den Verein im Vorstand zu unterstützen, melde Dich bitte so bald wie möglich beim Vorstand: vorstand@de-rse.org.\\
 
 Der Tätigkeitsbericht 2020 kann hier eingesehen werden:\\
+
 \href{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2020/Rechenschaftsbericht_2020_publiziert.pdf}{https://github.com/DE-RSE/berichte/raw/master/Jahresberichte/2020/\\Rechenschaftsbericht\_2020\_publiziert.pdf}.
 
 \closing{Mit freundlichen Grüßen}
