--- a/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
+++ b/Einladung_Jahreshauptversammlung/Einladung_Jahreshauptversammlung_2019.tex
@@ -8,11 +8,9 @@
 \setkomavar{place}{Berlin}
 
 \begin{letter}{
-    Max Mustermann\\
-    Musterstraße 0815\\
-    D-01234 Oberkleindorf
+    per email
 }
-\opening{Lieber Max,}
+\opening{Liebes Vereinsmitglied,}
 
 der de-RSE e.V. lädt alle Vereinsmitglieder zur ordentlichen Jahreshauptversammlung am 6. Juni 2019 um 15:15 Uhr ein.
 Diese wird im Konferenzsaal A56 im Wissenschaftspark Albert Einstein in Potsdam stattfinden.
