--- a/Spendenquittung/spendenquittung.tex
+++ b/Spendenquittung/spendenquittung.tex
@@ -67,10 +67,10 @@
 
 \MyFormBox[2.0cm]{Name und Anschrift des Zuwendenden}{}
 
-\begin{tabu}{|[1pt]p{0.3\textwidth}|[1pt]p{0.32\textwidth} |[1pt]p{0.3\textwidth}|[1pt]} \tabucline[1pt]{-}
+\begin{tabu}{|[1pt]p{0.2\textwidth}|[1pt]p{0.52\textwidth} |[1pt]p{0.2\textwidth}|[1pt]} \tabucline[1pt]{-}
 \scriptsize \ifthenelse{\boolean{sammel}}{Summe}{Betrag} der Zuwendungen - in Ziffern - & \scriptsize- in Buchstaben - & \scriptsize \ifthenelse{\boolean{sammel}}{Zeitraum der Sammelbestätigung}{Tag der Zuwendung} \\ 
 \vspace*{1em} & & \\ 
-123,45 \euro & --- Einhundertdreiundzwangig --- & 01.01.2001--31.12.2001 \\
+\hspace*{7em} \euro &  &  \\
 \vspace*{1em} & & \\ \tabucline[1pt]{-}
 \end{tabu}
 
@@ -91,7 +91,7 @@ Es wird bestätigt, dass die Zuwendung nur zur Förderung der begünstigten Zwec
 
 \vspace*{2.5em} 
 
-Ortsname, den \today \hspace*{20em} Max Mustermann
+Berlin, den  \hspace*{24em} 
 
 \hrule
 
